Refactor SASS - included color functions

--- a/httpdocs/assets/styles/css/app.css
+++ b/httpdocs/assets/styles/css/app.css
@@ -5,7 +5,7 @@
 /**
  * Correct `block` display not defined in IE 8/9.
  */
-/* line 22, ../sass/_normalize.scss */
+/* line 22, ../sass/overrides/_normalize.scss */
 article,
 aside,
 details,
@@ -23,7 +23,7 @@ summary {
 /**
  * Correct `inline-block` display not defined in IE 8/9.
  */
-/* line 32, ../sass/_normalize.scss */
+/* line 32, ../sass/overrides/_normalize.scss */
 audio,
 canvas,
 video {
@@ -33,7 +33,7 @@ video {
  * Prevent modern browsers from displaying `audio` without controls.
  * Remove excess height in iOS 5 devices.
  */
-/* line 41, ../sass/_normalize.scss */
+/* line 41, ../sass/overrides/_normalize.scss */
 audio:not([controls]) {
   display: none;
   height: 0; }
@@ -42,12 +42,12 @@ audio:not([controls]) {
  * Address `[hidden]` styling not present in IE 8/9.
  * Hide the `template` element in IE, Safari, and Firefox < 22.
  */
-/* line 52, ../sass/_normalize.scss */
+/* line 52, ../sass/overrides/_normalize.scss */
 [hidden],
 template {
   display: none; }
 
-/* line 56, ../sass/_normalize.scss */
+/* line 56, ../sass/overrides/_normalize.scss */
 script {
   display: none !important; }
 
@@ -59,7 +59,7 @@ script {
  * 2. Prevent iOS text size adjust after orientation change, without disabling
  *    user zoom.
  */
-/* line 70, ../sass/_normalize.scss */
+/* line 70, ../sass/overrides/_normalize.scss */
 html {
   font-family: sans-serif;
   /* 1 */
@@ -71,7 +71,7 @@ html {
 /**
  * Remove default margin.
  */
-/* line 80, ../sass/_normalize.scss */
+/* line 80, ../sass/overrides/_normalize.scss */
 body {
   margin: 0; }
 
@@ -81,21 +81,21 @@ body {
 /**
  * Remove the gray background color from active links in IE 10.
  */
-/* line 92, ../sass/_normalize.scss */
+/* line 92, ../sass/overrides/_normalize.scss */
 a {
   background: transparent; }
 
 /**
  * Address `outline` inconsistency between Chrome and other browsers.
  */
-/* line 100, ../sass/_normalize.scss */
+/* line 100, ../sass/overrides/_normalize.scss */
 a:focus {
   outline: thin dotted; }
 
 /**
  * Improve readability when focused and also mouse hovered in all browsers.
  */
-/* line 109, ../sass/_normalize.scss */
+/* line 109, ../sass/overrides/_normalize.scss */
 a:active,
 a:hover {
   outline: 0; }
@@ -107,7 +107,7 @@ a:hover {
  * Address variable `h1` font-size and margin within `section` and `article`
  * contexts in Firefox 4+, Safari 5, and Chrome.
  */
-/* line 122, ../sass/_normalize.scss */
+/* line 122, ../sass/overrides/_normalize.scss */
 h1 {
   font-size: 2em;
   margin: 0.67em 0; }
@@ -115,14 +115,14 @@ h1 {
 /**
  * Address styling not present in IE 8/9, Safari 5, and Chrome.
  */
-/* line 131, ../sass/_normalize.scss */
+/* line 131, ../sass/overrides/_normalize.scss */
 abbr[title] {
   border-bottom: 1px dotted; }
 
 /**
  * Address style set to `bolder` in Firefox 4+, Safari 5, and Chrome.
  */
-/* line 140, ../sass/_normalize.scss */
+/* line 140, ../sass/overrides/_normalize.scss */
 b,
 strong {
   font-weight: bold; }
@@ -130,14 +130,14 @@ strong {
 /**
  * Address styling not present in Safari 5 and Chrome.
  */
-/* line 148, ../sass/_normalize.scss */
+/* line 148, ../sass/overrides/_normalize.scss */
 dfn {
   font-style: italic; }
 
 /**
  * Address differences between Firefox and other browsers.
  */
-/* line 156, ../sass/_normalize.scss */
+/* line 156, ../sass/overrides/_normalize.scss */
 hr {
   -moz-box-sizing: content-box;
   box-sizing: content-box;
@@ -146,7 +146,7 @@ hr {
 /**
  * Address styling not present in IE 8/9.
  */
-/* line 166, ../sass/_normalize.scss */
+/* line 166, ../sass/overrides/_normalize.scss */
 mark {
   background: #ff0;
   color: #000; }
@@ -154,7 +154,7 @@ mark {
 /**
  * Correct font family set oddly in Safari 5 and Chrome.
  */
-/* line 178, ../sass/_normalize.scss */
+/* line 178, ../sass/overrides/_normalize.scss */
 code,
 kbd,
 pre,
@@ -165,28 +165,28 @@ samp {
 /**
  * Improve readability of pre-formatted text in all browsers.
  */
-/* line 187, ../sass/_normalize.scss */
+/* line 187, ../sass/overrides/_normalize.scss */
 pre {
   white-space: pre-wrap; }
 
 /**
  * Set consistent quote types.
  */
-/* line 195, ../sass/_normalize.scss */
+/* line 195, ../sass/overrides/_normalize.scss */
 q {
   quotes: "\201C" "\201D" "\2018" "\2019"; }
 
 /**
  * Address inconsistent and variable font size in all browsers.
  */
-/* line 203, ../sass/_normalize.scss */
+/* line 203, ../sass/overrides/_normalize.scss */
 small {
   font-size: 80%; }
 
 /**
  * Prevent `sub` and `sup` affecting `line-height` in all browsers.
  */
-/* line 212, ../sass/_normalize.scss */
+/* line 212, ../sass/overrides/_normalize.scss */
 sub,
 sup {
   font-size: 75%;
@@ -194,11 +194,11 @@ sup {
   position: relative;
   vertical-align: baseline; }
 
-/* line 219, ../sass/_normalize.scss */
+/* line 219, ../sass/overrides/_normalize.scss */
 sup {
   top: -0.5em; }
 
-/* line 223, ../sass/_normalize.scss */
+/* line 223, ../sass/overrides/_normalize.scss */
 sub {
   bottom: -0.25em; }
 
@@ -208,14 +208,14 @@ sub {
 /**
  * Remove border when inside `a` element in IE 8/9.
  */
-/* line 235, ../sass/_normalize.scss */
+/* line 235, ../sass/overrides/_normalize.scss */
 img {
   border: 0; }
 
 /**
  * Correct overflow displayed oddly in IE 9.
  */
-/* line 243, ../sass/_normalize.scss */
+/* line 243, ../sass/overrides/_normalize.scss */
 svg:not(:root) {
   overflow: hidden; }
 
@@ -225,7 +225,7 @@ svg:not(:root) {
 /**
  * Address margin not present in IE 8/9 and Safari 5.
  */
-/* line 255, ../sass/_normalize.scss */
+/* line 255, ../sass/overrides/_normalize.scss */
 figure {
   margin: 0; }
 
@@ -235,7 +235,7 @@ figure {
 /**
  * Define consistent border, margin, and padding.
  */
-/* line 267, ../sass/_normalize.scss */
+/* line 267, ../sass/overrides/_normalize.scss */
 fieldset {
   border: 1px solid #c0c0c0;
   margin: 0 2px;
@@ -245,7 +245,7 @@ fieldset {
  * 1. Correct `color` not being inherited in IE 8/9.
  * 2. Remove padding so people aren't caught out if they zero out fieldsets.
  */
-/* line 278, ../sass/_normalize.scss */
+/* line 278, ../sass/overrides/_normalize.scss */
 legend {
   border: 0;
   /* 1 */
@@ -257,7 +257,7 @@ legend {
  * 2. Correct font size not being inherited in all browsers.
  * 3. Address margins set differently in Firefox 4+, Safari 5, and Chrome.
  */
-/* line 292, ../sass/_normalize.scss */
+/* line 292, ../sass/overrides/_normalize.scss */
 button,
 input,
 select,
@@ -273,7 +273,7 @@ textarea {
  * Address Firefox 4+ setting `line-height` on `input` using `!important` in
  * the UA stylesheet.
  */
-/* line 304, ../sass/_normalize.scss */
+/* line 304, ../sass/overrides/_normalize.scss */
 button,
 input {
   line-height: normal; }
@@ -284,7 +284,7 @@ input {
  * Correct `button` style inheritance in Chrome, Safari 5+, and IE 8+.
  * Correct `select` style inheritance in Firefox 4+ and Opera.
  */
-/* line 316, ../sass/_normalize.scss */
+/* line 316, ../sass/overrides/_normalize.scss */
 button,
 select {
   text-transform: none; }
@@ -296,7 +296,7 @@ select {
  * 3. Improve usability and consistency of cursor style between image-type
  *    `input` and others.
  */
-/* line 331, ../sass/_normalize.scss */
+/* line 331, ../sass/overrides/_normalize.scss */
 button,
 html input[type="button"],
 input[type="reset"],
@@ -309,7 +309,7 @@ input[type="submit"] {
 /**
  * Re-set default cursor for disabled elements.
  */
-/* line 341, ../sass/_normalize.scss */
+/* line 341, ../sass/overrides/_normalize.scss */
 button[disabled],
 html input[disabled] {
   cursor: default; }
@@ -318,7 +318,7 @@ html input[disabled] {
  * 1. Address box sizing set to `content-box` in IE 8/9.
  * 2. Remove excess padding in IE 8/9.
  */
-/* line 351, ../sass/_normalize.scss */
+/* line 351, ../sass/overrides/_normalize.scss */
 input[type="checkbox"],
 input[type="radio"] {
   box-sizing: border-box;
@@ -331,7 +331,7 @@ input[type="radio"] {
  * 2. Address `box-sizing` set to `border-box` in Safari 5 and Chrome
  *    (include `-moz` to future-proof).
  */
-/* line 362, ../sass/_normalize.scss */
+/* line 362, ../sass/overrides/_normalize.scss */
 input[type="search"] {
   -webkit-appearance: textfield;
   /* 1 */
@@ -344,7 +344,7 @@ input[type="search"] {
  * Remove inner padding and search cancel button in Safari 5 and Chrome
  * on OS X.
  */
-/* line 375, ../sass/_normalize.scss */
+/* line 375, ../sass/overrides/_normalize.scss */
 input[type="search"]::-webkit-search-cancel-button,
 input[type="search"]::-webkit-search-decoration {
   -webkit-appearance: none; }
@@ -352,7 +352,7 @@ input[type="search"]::-webkit-search-decoration {
 /**
  * Remove inner padding and border in Firefox 4+.
  */
-/* line 384, ../sass/_normalize.scss */
+/* line 384, ../sass/overrides/_normalize.scss */
 button::-moz-focus-inner,
 input::-moz-focus-inner {
   border: 0;
@@ -362,7 +362,7 @@ input::-moz-focus-inner {
  * 1. Remove default vertical scrollbar in IE 8/9.
  * 2. Improve readability and alignment in all browsers.
  */
-/* line 394, ../sass/_normalize.scss */
+/* line 394, ../sass/overrides/_normalize.scss */
 textarea {
   overflow: auto;
   /* 1 */
@@ -375,7 +375,7 @@ textarea {
 /**
  * Remove most spacing between table cells.
  */
-/* line 407, ../sass/_normalize.scss */
+/* line 407, ../sass/overrides/_normalize.scss */
 table {
   border-collapse: collapse;
   border-spacing: 0; }
@@ -6628,12 +6628,28 @@ th.hide-for-touch {
 .touch th.show-for-touch {
   display: table-cell !important; }
 
-/* line 28, ../sass/base/_config.scss */
+/* line 11, ../sass/config/_colors.scss */
+.bg-black {
+  background-color: black; }
+
+/* line 11, ../sass/config/_colors.scss */
+.bg-white {
+  background-color: white; }
+
+/* line 16, ../sass/config/_colors.scss */
+.black {
+  color: black; }
+
+/* line 16, ../sass/config/_colors.scss */
+.white {
+  color: white; }
+
+/* line 3, ../sass/overrides/_shame.scss */
 .clearfix:before,
 .clearfix:after {
   content: "";
   display: table; }
 
-/* line 32, ../sass/base/_config.scss */
+/* line 7, ../sass/overrides/_shame.scss */
 .clearfix:after {
   clear: both; }
