Helper classes and useful defaults

--- a/httpdocs/assets/styles/css/app.css
+++ b/httpdocs/assets/styles/css/app.css
@@ -6706,13 +6706,78 @@ th.hide-for-touch {
 .white {
   color: white; }
 
-/* line 1, ../sass/base/_typography.scss */
+/* line 7, ../sass/base/_layout.scss */
 html, body {
-  font-size: 16px; }
+  height: 100%; }
 
-/* line 5, ../sass/base/_typography.scss */
+/* line 11, ../sass/base/_layout.scss */
+.nix-pad {
+  padding: 0; }
+
+/* line 15, ../sass/base/_layout.scss */
+.nix-pad-bot {
+  padding-bottom: 0; }
+
+/* line 19, ../sass/base/_layout.scss */
+.nix-pad-top {
+  padding-top: 0; }
+
+/* line 23, ../sass/base/_layout.scss */
+.pos-relative {
+  position: relative; }
+
+/* line 27, ../sass/base/_layout.scss */
+.pos-absolute {
+  position: absolute; }
+
+/* line 31, ../sass/base/_layout.scss */
+.left-absolute {
+  left: 0; }
+
+/* line 35, ../sass/base/_layout.scss */
+.right-absolute {
+  right: 0; }
+
+/* line 39, ../sass/base/_layout.scss */
+.top-absolute {
+  top: 0; }
+
+/* line 43, ../sass/base/_layout.scss */
+.bottom-absolute {
+  top: 0; }
+
+/* line 4, ../sass/base/_typography.scss */
+html, body {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.45em; }
+
+/* line 11, ../sass/base/_typography.scss */
 a {
   color: inherit; }
+  /* line 13, ../sass/base/_typography.scss */
+  a:hover {
+    color: inherit; }
+
+/* line 18, ../sass/base/_typography.scss */
+h1, h2, h3, h4, h5, h6 {
+  line-height: 1.25em; }
+
+/* line 22, ../sass/base/_typography.scss */
+.align-left {
+  text-align: left; }
+
+/* line 25, ../sass/base/_typography.scss */
+.align-right {
+  text-align: right; }
+
+/* line 28, ../sass/base/_typography.scss */
+.align-center {
+  text-align: center; }
+
+/* line 31, ../sass/base/_typography.scss */
+.align-justify {
+  text-align: justify; }
 
 /* line 3, ../sass/overrides/_shame.scss */
 .clearfix:before,
