--- a/httpdocs/assets/styles/sass/base/_layout.scss
+++ b/httpdocs/assets/styles/sass/base/_layout.scss
@@ -2,21 +2,21 @@
 // EM IS FOR TYPE RELATIVE ADJUSTMENTS
 
 // the 'root' class is used to designate root level elements, giving us the ability to keep
-// clean code, and semantic markup e.g. <nav class="root"></nav> <footer class="root"></footer>
+// clean code and semantic markup e.g. <nav class="root"></nav> <footer class="root"></footer>
 
 html, body {
   height: 100%; // 100% height div hack
 }
 
-.nix-pad {
+.no-pad {
   padding: 0;
 }
 
-.nix-pad-bot {
+.no-pad-bot {
   padding-bottom: 0;
 }
 
-.nix-pad-top {
+.no-pad-top {
   padding-top: 0;
 }
 
