--- a/httpdocs/assets/styles/sass/base/_typography.scss
+++ b/httpdocs/assets/styles/sass/base/_typography.scss
@@ -2,7 +2,7 @@
 // EM IS FOR TYPE RELATIVE ADJUSTMENTS
 
 html, body {
-  font-size: 16px;
+  font-size: $font-size;
   font-weight: 400;
   line-height: $line-height-body;
 }
@@ -30,4 +30,43 @@ h1, h2, h3, h4, h5, h6 {
 }
 .align-justify {
   text-align: justify;
+}
+
+.t1 {
+  font-size: (1rem * nth($type-scale-ratio, 1) * nth($type-scale-ratio, 1) * nth($type-scale-ratio, 1));
+
+  &.alt {
+    font-size: (1rem * nth($type-scale-ratio, 2) * nth($type-scale-ratio, 2) * nth($type-scale-ratio, 2));
+  }
+}
+.t2 {
+  font-size: (1rem * nth($type-scale-ratio, 1) * nth($type-scale-ratio, 1));
+
+  &.alt {
+    font-size: (1rem * nth($type-scale-ratio, 2) * nth($type-scale-ratio, 2));
+  }
+}
+.t3 {
+  font-size: (1rem * nth($type-scale-ratio, 1));
+
+  &.alt {
+    font-size: (1rem * nth($type-scale-ratio, 2));
+  }
+}
+.t4 {
+  font-size: 1rem;
+}
+.t5 {
+  font-size: (1rem / nth($type-scale-ratio, 1));
+
+  &.alt {
+    font-size: (1rem / nth($type-scale-ratio, 2));  
+  }
+}
+.t6 {
+  font-size: (1rem / nth($type-scale-ratio, 1) / nth($type-scale-ratio, 1));
+
+  &.alt {
+    font-size: (1rem / nth($type-scale-ratio, 2) / nth($type-scale-ratio, 2));
+  }
 }
