--- a/httpdocs/assets/styles/sass/base/_typography.scss
+++ b/httpdocs/assets/styles/sass/base/_typography.scss
@@ -32,41 +32,47 @@ h1, h2, h3, h4, h5, h6 {
   text-align: justify;
 }
 
+
+// modular type scale
 .t1 {
-  font-size: (1rem * nth($type-scale-ratio, 1) * nth($type-scale-ratio, 1) * nth($type-scale-ratio, 1));
+  font-size: (1rem * $type-scale-ratio * $type-scale-ratio * $type-scale-ratio);
 
   &.alt {
-    font-size: (1rem * nth($type-scale-ratio, 2) * nth($type-scale-ratio, 2) * nth($type-scale-ratio, 2));
+    font-size: (0.875rem * $type-scale-ratio * $type-scale-ratio * $type-scale-ratio);
   }
 }
 .t2 {
-  font-size: (1rem * nth($type-scale-ratio, 1) * nth($type-scale-ratio, 1));
+  font-size: (1rem * $type-scale-ratio * $type-scale-ratio);
 
   &.alt {
-    font-size: (1rem * nth($type-scale-ratio, 2) * nth($type-scale-ratio, 2));
+    font-size: (0.875rem * $type-scale-ratio * $type-scale-ratio);
   }
 }
 .t3 {
-  font-size: (1rem * nth($type-scale-ratio, 1));
+  font-size: (1rem * $type-scale-ratio);
 
   &.alt {
-    font-size: (1rem * nth($type-scale-ratio, 2));
+    font-size: (0.875rem * $type-scale-ratio)
   }
 }
 .t4 {
   font-size: 1rem;
-}
-.t5 {
-  font-size: (1rem / nth($type-scale-ratio, 1));
 
   &.alt {
-    font-size: (1rem / nth($type-scale-ratio, 2));  
+    font-size: 0.875rem;
+  }
+}
+.t5 {
+  font-size: (1rem / $type-scale-ratio);
+
+  &.alt {
+    font-size: (0.875rem / $type-scale-ratio);
   }
 }
 .t6 {
-  font-size: (1rem / nth($type-scale-ratio, 1) / nth($type-scale-ratio, 1));
+  font-size: (1rem / $type-scale-ratio / $type-scale-ratio);
 
   &.alt {
-    font-size: (1rem / nth($type-scale-ratio, 2) / nth($type-scale-ratio, 2));
+    font-size: (0.875rem / $type-scale-ratio / $type-scale-ratio);
   }
 }
