--- a/httpdocs/assets/styles/sass/app.scss
+++ b/httpdocs/assets/styles/sass/app.scss
@@ -23,11 +23,13 @@
 // Base
 @import "base/layout";
 @import "base/typography";
+@import "base/chrome";
+@import "base/interactions";
 
 // Repeating Components
 // @import "components/buttons";
 // @import "components/forms";
-// @import "components/list";
+// @import "components/lists";
 
 // High Level Modules (eg: hero, footer, datepicker)
 // @import "modules/module";
