--- a/httpdocs/assets/styles/sass/base/_typography.scss
+++ b/httpdocs/assets/styles/sass/base/_typography.scss
@@ -7,72 +7,67 @@ html, body {
   line-height: $line-height-body;
 }
 
-// this helps with link color
-a {
-  color: inherit;
-  &:hover {
-    color: inherit;
-  }
-}
-
+// set line length only here
 h1, h2, h3, h4, h5, h6 {
 	line-height: $line-height-header;
 }
 
-.align-left {
+
+.t-left {
   text-align: left;
 }
-.align-right {
+.t-right {
   text-align: right;
 }
-.align-center {
+.t-center {
   text-align: center;
 }
-.align-justify {
+.t-justify {
   text-align: justify;
 }
 
 
 // modular type scale
-.t1 {
+// use this to extend modules
+.t-1 {
   font-size: (1rem * $type-scale-ratio * $type-scale-ratio * $type-scale-ratio);
 
-  &.alt {
+  &.t-alt {
     font-size: (0.875rem * $type-scale-ratio * $type-scale-ratio * $type-scale-ratio);
   }
 }
-.t2 {
+.t-2 {
   font-size: (1rem * $type-scale-ratio * $type-scale-ratio);
 
-  &.alt {
+  &.t-alt {
     font-size: (0.875rem * $type-scale-ratio * $type-scale-ratio);
   }
 }
-.t3 {
+.t-3 {
   font-size: (1rem * $type-scale-ratio);
 
-  &.alt {
+  &.t-alt {
     font-size: (0.875rem * $type-scale-ratio)
   }
 }
-.t4 {
+.t-4 {
   font-size: 1rem;
 
-  &.alt {
+  &.t-alt {
     font-size: 0.875rem;
   }
 }
-.t5 {
+.t-5 {
   font-size: (1rem / $type-scale-ratio);
 
-  &.alt {
+  &.t-alt {
     font-size: (0.875rem / $type-scale-ratio);
   }
 }
-.t6 {
+.t-6 {
   font-size: (1rem / $type-scale-ratio / $type-scale-ratio);
 
-  &.alt {
+  &.t-alt {
     font-size: (0.875rem / $type-scale-ratio / $type-scale-ratio);
   }
 }
