--- a/httpdocs/assets/styles/sass/utility/_type_mixins.scss
+++ b/httpdocs/assets/styles/sass/utility/_type_mixins.scss
@@ -1,3 +1,18 @@
+// Font-Face Mixin
+@mixin font-face($font-family, $font-filename, $font-weight : 400, $font-style :normal) {
+  @font-face {
+    font-family: '#{$font-family}';
+    src: url('/assets/fonts/#{$font-filename}.eot');
+    src: url('/assets/fonts/#{$font-filename}.eot?#iefix') format('embedded-opentype'),
+    url('/assets/fonts/#{$font-filename}.woff') format('woff'),
+    url('/assets/fonts/#{$font-filename}.ttf') format('truetype'),
+    url('/assets/fonts/#{$font-filename}.otf') format('opentype'),
+    url('/assets/fonts/#{$font-filename}.svg##{$font-family}') format('svg');
+    font-weight: $font-weight;
+    font-style: $font-style;
+  }
+}
+
 @mixin font($font-name: "Helvetica", $font-size: false, $font-weight: false, $line-height:false, $font-style: false, $text-decoration: false, $text-transform: false){
 
   font-family: $font-name;
