--- a/httpdocs/assets/styles/sass/overrides/_3rd_party_overrides.scss
+++ b/httpdocs/assets/styles/sass/overrides/_3rd_party_overrides.scss
@@ -1,3 +1,8 @@
+// override foundation column floating
+[class*="column"] + [class*="column"]:last-child {
+  float: left;
+}
+
 // reset a color
 a {
   color: inherit;
